--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ section_id: home
 
     <div class='medium-6 columns'>
       <h3>The Inter/sections Symposium</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. The Symposium includes lightning talks from researchers, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. Attendance is free, but booking is essential as lunch will be provided.</p>
     </div>
     <div class='medium-6 columns iframe-content'>
       
@@ -81,8 +80,7 @@ section_id: home
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>A week of events</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Inter/sections is an annual meeting place for curious people interested in exploring new frontiers in media, art and technology. Through a week-long programme of free events, the 80-strong cohort of the Media and Arts Technology (MAT) at Queen Mary University of London invite you to think, talk and experiment. Events include a family Cryptoparty, an exhibition of interactive artwork and a Symposium.</p>
     </div>
     <div class='medium-6 columns iframe-content'>
       <img src="{{ site.url }}/images/headers/panel.jpg"
