--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -15,13 +15,19 @@ section_id: schedule
 
 <div class='full'>
   <div class='row iframe-flex'>
-    <div class='medium-12 columns'>
-      <h2>OUR LOCATION: Art Pavilion Mile End</h2>
-    </div>
+    <!-- <div class='medium-12 columns'>
+    </div> -->
       <div class='medium-6 columns'>
-        <h3>About the art pavilion</h3>
-        <p  class="text-schedule">The art pavilion blah blah.</p>
-        <p  class="text-schedule">It is conveniently located within walking distance of Mile End and Stepney Green tube stations, and the 277, 205 and 25 buses stop nearby.</p>
+        <h3>The location: Art Pavilion, Mile End Park</h3>
+        <p>The Art Pavilion in Mile End Park is a stunning gallery space with a glass frontage overlooking a small lake. The nearest Underground station in Mile End (Central Line). The journey from the station is around 210 metres long, and should take around 5 minutes. If you have difficulty getting about, it could take 10 minutes.</p>
+
+        <p>The Art Pavilion is a fully accessible space with step-free access from Grove Road.</p>
+
+        <p>Mile End Park,<br />Clinton Road,<br />London<br />E3 4QY.</p>
+
+        <a href="http://www.towerhamlets.gov.uk/Documents/Leisure-and-culture/Parks-and-open-spaces/directions-art-pavilion.pdf" class="button-link">Click here for a PDF map.</a>
+
+        
       </div>
       <div class='medium-6 columns iframe-content'>
         
