--- a/symposium.html
+++ b/symposium.html
@@ -17,8 +17,11 @@ section_id: symposium
   <div class='row'>
     <div class='medium-12 columns'>
       <h2>About the Symposium</h2>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. The Symposium includes lightning talks from researchers, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. Attendance is free, but booking is essential as lunch will be provided.</p>
+      <p>The workshop Technology, Ethics and the Arts Now will be run by Evelyn Wilson. Evelyn Wilson  is Co-Director of The Culture Capital Exchange (www.tcce.co.uk) and specialises in developing and curating both large and small-scale initiatives and activities that bring together researchers with cultural/creative sector practitioners around areas of common concern. She has a long history of working in the media and digital media arts. She is Honorary Research Associate in the Centre for Geo Humanities at Royal Holloway, University of London and a member of the Advisory Group for MAT.</p>
+
+      <p>We continue to welcome applications for lightning talks on ethical issues within your field or participatory activities. Please email info@intersections.io with a short description of your proposed contribution.</p>
+
 
       <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link">Register now (via Eventbrite)</a>
     </div>
