Added a couple of words

--- a/schedule-and-location.html
+++ b/schedule-and-location.html
@@ -21,7 +21,7 @@ section_id: schedule
         <h3>The location: Art Pavilion, Mile End Park</h3>
         <p>The Art Pavilion in Mile End Park is a stunning gallery space with a glass frontage overlooking a small lake. The nearest Underground station in Mile End (Central Line). The journey from the station is around 210 metres long, and should take around 5 minutes. If you have difficulty getting about, it could take 10 minutes.</p>
 
-        <p>The Art Pavilion is a fully accessible space with step-free access from Grove Road.</p>
+        <p>The Art Pavilion is a fully accessible space with step-free access from Grove Road. It is located at:</p>
 
         <p>Mile End Park,<br />Clinton Road,<br />London<br />E3 4QY.</p>
 
