--- a/about.html
+++ b/about.html
@@ -34,11 +34,14 @@ section_id: about
 
 <div class='full'>
   <div class='row'>
-    <div class='large-12 columns'>
       <h2>About the MAT program</h2>
-      <p>QMUL's PhD in Media and Arts Technology is an innovative inter-disciplinary programme in the sciences and technologies that transform the creative sector, with a special focus on Sound, Music, Media and Interaction. Its mission is to produce post-graduates that have world-class skills in technical and scientific research, creativity, building and using software and hardware, and are prepared to contribute to the world’s Digital Economy.</p>
-      <a href="http://www.mat.qmul.ac.uk" class="button-link">Visit the MAT website</a>
-    </div>
+      <div class='small-2 columns'>
+        <p><img src="{{ site.url }}/images/supporters/mat_sq.gif" /></p>
+      </div>
+      <div class='small-10 columns'>
+        <p>QMUL's PhD in Media and Arts Technology is an innovative inter-disciplinary programme in the sciences and technologies that transform the creative sector, with a special focus on Sound, Music, Media and Interaction. Its mission is to produce post-graduates that have world-class skills in technical and scientific research, creativity, building and using software and hardware, and are prepared to contribute to the world’s Digital Economy.</p>
+        <a href="http://www.mat.qmul.ac.uk" class="button-link">Visit the MAT website</a>
+      </div>
   </div>
 
 
