Changed name of schedule-and-location to location

--- a/location.html
+++ b/location.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Schedule and Locations
-section_id: schedule
+title: Location
+section_id: Location
 ---
 
 <div class='full parallax' style='background-image: url(images/headers/wires.jpg); color: #fff;'>
   <div class='row'>
     <div class='twelve columns'>
-      {% include section-header.html title="Schedule and location" color="#fff" tagline="" class="big" %}
+      {% include section-header.html title="Where it's happening" color="#fff" tagline="" class="big" %}
     </div>
   </div>
   <div class='four spacing'></div>
@@ -19,6 +19,7 @@ section_id: schedule
     </div> -->
       <div class='medium-6 columns'>
         <h3>The location: Art Pavilion, Mile End Park</h3>
+        <p>All events are taking place at <a href='http://www.towerhamlets.gov.uk/lgnl/leisure_and_culture/parks_and_open_spaces/mile_end_park/the_art_pavilion,_mile_end/the_art_pavilion,_mile_end.aspx'>The Art Pavilion, Mile End Park.</a></p>
         <p>The Art Pavilion in Mile End Park is a stunning gallery space with a glass frontage overlooking a small lake. The nearest Underground station in Mile End (Central Line). The journey from the station is around 210 metres long, and should take around 5 minutes. If you have difficulty getting about, it could take 10 minutes.</p>
 
         <p>The Art Pavilion is a fully accessible space with step-free access from Grove Road. It is located at:</p>
@@ -35,27 +36,23 @@ section_id: schedule
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=AIzaSyCFk-644ph0WLEaCdVFKsrSQFu53VMKROY" allowfullscreen></iframe>
       </div>
   </div>
-</div>
 
 
-<div class='full'>
+<!-- <div class='full'>
   <div class='row'>
     <div class='medium-12 columns'>
       <h2>Scheulde</h2>
       <p>Button needed for PDF download.</p>
     </div>
-    <!-- <div class='medium-6 columns'>
-      <h3>This year's theme</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-    </div> -->
+
   </div>
 </div>
+ -->
 
 
 
 
 
-
-
+<div class='two spacing'></div>
 {% include our-supporters.html %}
+</div>
