Added other tube lines that serve Mile End

--- a/location.html
+++ b/location.html
@@ -20,7 +20,7 @@ section_id: Location
       <div class='medium-6 columns'>
         <h3>The location: Art Pavilion, Mile End Park</h3>
         <p>All events are taking place at <a href='http://www.towerhamlets.gov.uk/lgnl/leisure_and_culture/parks_and_open_spaces/mile_end_park/the_art_pavilion,_mile_end/the_art_pavilion,_mile_end.aspx'>The Art Pavilion, Mile End Park.</a></p>
-        <p>The Art Pavilion in Mile End Park is a stunning gallery space with a glass frontage overlooking a small lake. The nearest Underground station in Mile End (Central Line). The journey from the station is around 210 metres long, and should take around 5 minutes. If you have difficulty getting about, it could take 10 minutes.</p>
+        <p>The Art Pavilion in Mile End Park is a stunning gallery space with a glass frontage overlooking a small lake. The nearest Underground station in Mile End (Central, District, and Hammersmith and City lines). The journey from the station is around 210 metres long, and should take around 5 minutes. If you have difficulty getting about, it could take 10 minutes.</p>
 
         <p>The Art Pavilion is a fully accessible space with step-free access from Grove Road. It is located at:</p>
 
