Added booking button to front page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ section_id: home
     <div class='medium-6 columns'>
       <h3>The Inter/sections Symposium</h3>
       <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. The Symposium includes lightning talks from researchers, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. Attendance is free, but booking is essential as lunch will be provided.</p>
+
+      <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link">Register now (via Eventbrite)</a>
     </div>
     <div class='medium-6 columns iframe-content'>
       
