--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ section_id: home
       <h3>The Inter/sections Symposium</h3>
       <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. The Symposium includes lightning talks from researchers, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. Attendance is free, but booking is essential as lunch will be provided.</p>
 
-      <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link">Register now (via Eventbrite)</a>
+      <a href='symposium.html' class='button-link'>Read more</a><a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link register-now" style='margin-left: 1em'>Book your place (Eventbrite)</a>
+      <div class='spacing'></div>
     </div>
     <div class='medium-6 columns iframe-content'>
       
@@ -83,6 +84,9 @@ section_id: home
     <div class='medium-6 columns'>
       <h3>A week of events</h3>
       <p>Inter/sections is an annual meeting place for curious people interested in exploring new frontiers in media, art and technology. Through a week-long programme of free events, the 80-strong cohort of the Media and Arts Technology (MAT) at Queen Mary University of London invite you to think, talk and experiment. Events include a family Cryptoparty, an exhibition of interactive artwork and a Symposium.</p>
+
+      <a href="events.html" class="button-link">Read more</a>
+      <div class='spacing'></div>
     </div>
     <div class='medium-6 columns iframe-content'>
       <img src="{{ site.url }}/images/headers/panel.jpg"
@@ -109,6 +113,8 @@ section_id: home
       <h3>Exhibition of media art</h3>
       <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <a href="exhibition.html" class="button-link">Read more</a>
+      <div class='spacing'></div>
     </div>
     <div class='medium-6 columns iframe-content'>
       <iframe src="https://player.vimeo.com/video/186455106" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
