Added class for eventbrite button

--- a/symposium.html
+++ b/symposium.html
@@ -23,7 +23,7 @@ section_id: symposium
       <p>We continue to welcome applications for lightning talks on ethical issues within your field or participatory activities. Please email info@intersections.io with a short description of your proposed contribution.</p>
 
 
-      <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link">Register now (via Eventbrite)</a>
+      <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link register-now">Register now (via Eventbrite)</a>
     </div>
   </div>
 </div>
