Added exhibition blurb

--- a/exhibition.html
+++ b/exhibition.html
@@ -16,8 +16,9 @@ section_id: exhibition
 <div class='full'>
   <div class='row' style="display: flex">
     <div class='medium-6 columns'>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Accompanying the events of the week is our curated exhibition. Approaching the theme of Ethics and Politics in Media and Arts Technology from a more experimental and artistic perspective, we showcase work of internationally renowned designers and artists alongside our own PhD students' mixed media artworks. </p>
+      <p>We also present work specially commissioned for Inter/sections. Will Hurt's questioning of the relationship between artists and curators and Yosuke Ushigome's exploring of the concept behind shared economies are just two takes in the discourse of what role technology can play in a modern society.</p>
+
     </div>
     <div class='medium-6 columns iframe-content'>
       <iframe src="https://player.vimeo.com/video/186455106" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
