--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ section_id: home
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>Exhibition of media art</h3>
-      <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p>Accompanying the events of the week is our curated exhibition. Approaching the theme of Ethics and Politics in Media and Arts Technology from a more experimental and artistic perspective, we showcase work of internationally renowned designers and artists alongside our own PhD students' mixed media artworks. We also present the work of commissioned artists, including Will Hurt and Yosuke Ushigome.</p>
+
       <a href="exhibition.html" class="button-link">Read more</a>
       <div class='spacing'></div>
     </div>
