--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ section_id: home
     <!-- Start the two columns of content: -->
     <div class='medium-6 columns'>
       <h3>Exhibition of media art</h3>
-      <p>Accompanying the events of the week is our curated exhibition. Approaching the theme of Ethics and Politics in Media and Arts Technology from a more experimental and artistic perspective, we showcase work of internationally renowned designers and artists alongside our own PhD students' mixed media artworks. We also present the work of commissioned artists, including Will Hurt and Yosuke Ushigome.</p>
+      <p>Approaching the theme of Ethics and Politics in Media and Arts Technology from a more experimental and artistic perspective, our curated exhibition showcases the work of internationally renowned designers and artists alongside our own PhD students' mixed media artworks.</p>
+      <p>We also present work by Will Hurt and Yosuke Ushigome. Will's artwork, commissioned for Inter/sections, draws visitors' attention to built environments, while Yosuke's invites visitors to explore shared economies.</p>
 
       <a href="exhibition.html" class="button-link">Read more</a>
       <div class='spacing'></div>
@@ -123,71 +124,7 @@ section_id: home
   </div><!-- end row -->
 </div><!-- end full front-page-section symposium -->
 
-<!-- <div class='full front-page-section events'>
-  <div class='row' >
-  <div class="large-12 columns">
-  <h2 style="text-align: center; size: 6em; color: white">Events</h2>
-    <p style="size: 2.5em; color: white; padding: 10px;">One line here.</p>
-    </div>
-</div>
 
-<div class='full front-page-section exhibition'>
-  <div class='row' >
-  <div class="large-12 columns">
-  <h2 style="text-align: center; size: 6em; color: white">Exhibition</h2>
-    <p style="size: 2.5em; color: white; padding: 10px;">One line here.</p>
-    </div>
-</div> -->
-
-
-<!-- <div class='full'>
-  <div class='row'>
-  <h3>Our symposium speakers</h3>
-    {% for member in site.data.members %}
-      <div class='small-3 medium-3 large-3 columns'>
-        <div class='mod modTeamMember'>
-          <div class='member'>
-            <img class="avatar" alt="" src="{{ member.avatar }}" />
-            <div class='overlay'>
-              <div class='intro'>
-                <h3>{{member.name}}</h3>
-                <p>{{member.position}}</p>
-                <ul class='socials'>
-                  {% for social in member.socials %}
-                    <li>
-                      <a href='{{social.link}}'>
-                        <i class='fa fa-{{social.icon}}'></i>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              </div>
-            </div>
-          </div>
-          <p class='centered-text'>{{member.desc}}</p>
-          <div class='two spacing'></div>
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-</div> -->
-
-
-<!--div class='full parallax' style='background: #f5f5f5'-->
-
-  <!-- <div class='row'>
-    <div class='large-12 columns'>
-      <p class='centered-text'>
-        <i class='fa fa-quote-left' style='color: #F9CE06; font-size: 36px;'></i>
-      </p>
-    </div>
-  </div> -->
- <!--  <div class='row'>
-    <div class='large-12 columns'>
-      {% include section-header.html title="What our clients say" %}
-      <div class='spacing'></div>
-    </div>
-  </div> -->
   <div class='row'>
     <div class='large-12 columns'>
       <div class='mod modTestimonials'>
