Added links to download map and schedule

--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@ section_id: events
 
       <p>Find out what's going on each day on this page, or click the button below to download a daily schedule as a PDF.</p>
 
-      <a href="#" class="button-link">Download a programme  </a>
+      <a href="downloads/intersections_schedule.pdf" class="button-link">Download a schedule (PDF).</a>
     </div>
   </div>
 </div>
