--- a/location.html
+++ b/location.html
@@ -26,7 +26,7 @@ section_id: Location
 
         <p>Mile End Park,<br />Clinton Road,<br />London<br />E3 4QY.</p>
 
-        <a href="http://www.towerhamlets.gov.uk/Documents/Leisure-and-culture/Parks-and-open-spaces/directions-art-pavilion.pdf" class="button-link">Click here for a PDF map.</a>
+        <a href="downloads/intersections_map.pdf" class="button-link">Download a map (PDF).</a>
 
         
       </div>
@@ -36,18 +36,6 @@ section_id: Location
 src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJrdGpCiUddkgR_fKY1GiNYFg&key=AIzaSyCFk-644ph0WLEaCdVFKsrSQFu53VMKROY" allowfullscreen></iframe>
       </div>
   </div>
-
-
-<!-- <div class='full'>
-  <div class='row'>
-    <div class='medium-12 columns'>
-      <h2>Scheulde</h2>
-      <p>Button needed for PDF download.</p>
-    </div>
-
-  </div>
-</div>
- -->
 
 
 
