Added step-free and local maps.

--- a/location.html
+++ b/location.html
@@ -26,7 +26,9 @@ section_id: Location
 
         <p>Mile End Park,<br />Clinton Road,<br />London<br />E3 4QY.</p>
 
-        <a href="downloads/intersections_map.pdf" class="button-link">Download a map (PDF).</a>
+        <a href="http://www.towerhamlets.gov.uk/Documents/Leisure-and-culture/Parks-and-open-spaces/directions-art-pavilion.pdf" class="button-link">Download step-free directions (PDF).</a>
+
+        <a href="downloads/intersections_map.pdf" class="button-link">Download local map (PDF).</a>
 
         
       </div>
