Adjustments to headers

--- a/events.html
+++ b/events.html
@@ -18,6 +18,7 @@ section_id: events
 <div class='full'>
   <div class='row'>
     <div class='large-12 columns'>
+      <h2>A week of events exploring our theme</h2>
       <p class='header-line'>Inter/sections discusses this year's theme, Politics and Ethics in Media and Arts Technology, through a week-long series of events.</p>
 
       <p>Find out what's going on each day on this page, or click the button below to download a daily schedule as a PDF.</p>
