--- a/symposium.html
+++ b/symposium.html
@@ -17,12 +17,12 @@ section_id: symposium
   <div class='row'>
     <div class='medium-12 columns'>
       <h2>About the Symposium</h2>
-      <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. The Symposium includes lightning talks from Kate Bevan, Dan McQuillan and Stephen Minger, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. Attendance is free, but booking is essential as lunch will be provided.</p>
-      <p>The workshop Technology, Ethics and the Arts Now, run by Evelyn Wilson (co-director, TCCE), to unpick some timely and also challenging and complex questions around how the arts are using digital technologies now and the wider political, social, ethical and indeed economic contexts in which such uses and relationships are unfolding.</p>
+      <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. 
 
-      <p>We continue to welcome applications for lightning talks on ethical issues within your field or participatory activities. Please email info@intersections.io with a short description of your proposed contribution.</p>
+      <p>The Symposium includes keynote talks from Kate Bevan, Dan McQuillan and Stephen Minger, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. The workshop Technology, Ethics and the Arts Now, run by Evelyn Wilson, will unpick some timely and also challenging and complex questions around how the arts are using digital technologies now and the wider political, social, ethical and indeed economic contexts  in which such uses and relationships are unfolding.</p>
 
-
+      <p>Attendance is free, but booking is essential as lunch will be provided.</p>
+      
       <a href="https://www.eventbrite.co.uk/e/intersections-symposium-tickets-35385982426" class="button-link register-now">Register now (via Eventbrite)</a>
     </div>
   </div>
