Remove Kate Bevan

--- a/symposium.html
+++ b/symposium.html
@@ -19,7 +19,7 @@ section_id: symposium
       <h2>About the Symposium</h2>
       <p>Inter/sections culminates in a Symposium on Friday 8 September. This is a day-long event for discussion and exchange between academia, industry and activists. Featuring keynote speakers who are experts in emerging trends in science and media, the Inter/sections Symposium creates a space to debate new ethical frameworks for emerging technologies. 
 
-      <p>The Symposium includes keynote talks from Kate Bevan, Dan McQuillan and Stephen Minger, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. The workshop Technology, Ethics and the Arts Now, run by Evelyn Wilson, will unpick some timely and also challenging and complex questions around how the arts are using digital technologies now and the wider political, social, ethical and indeed economic contexts  in which such uses and relationships are unfolding.</p>
+      <p>The Symposium includes keynote talks from Dan McQuillan and Stephen Minger, a hands-on workshop run by the TCCE (The Culture Capital Exchange) exploring ethics, art and technology, as well as a panel on Work Ethics in the Age of Automation. The workshop Technology, Ethics and the Arts Now, run by Evelyn Wilson, will unpick some timely and also challenging and complex questions around how the arts are using digital technologies now and the wider political, social, ethical and indeed economic contexts  in which such uses and relationships are unfolding.</p>
 
       <p>Attendance is free, but booking is essential as lunch will be provided.</p>
       
